--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "xstring": "cpp",
-        "ostream": "cpp",
-        "xlocale": "cpp",
-        "xlocinfo": "cpp",
-        "vector": "cpp",
-        "string": "cpp"
-    }
+  "files.associations": {
+    "iostream": "cpp",
+    "xstring": "cpp",
+    "ostream": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "vector": "cpp",
+    "string": "cpp",
+    "fstream": "cpp",
+    "sstream": "cpp"
+  }
 }
