Comenado o sistema de carregamento

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "vector": "cpp",
     "string": "cpp",
     "fstream": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "iosfwd": "cpp"
   }
 }
